--- a/src/components/category.styles.sass
+++ b/src/components/category.styles.sass
@@ -1,4 +1,13 @@
-.ecommerce__categories
-  margin: 1em
-  padding: 1em
-  border: 0.1em solid #000
+.component-category
+  display: grid
+  grid-template-columns: 1fr 1fr 1fr 1fr
+  text-align: center
+  a
+    border-width: 0 0 0.1em 0
+    border-style: solid
+    border-color: grey
+    margin: 1em
+    img
+      width: 200px
+      height: 200px
+      object-fit: cover
