--- a/src/App.sass
+++ b/src/App.sass
@@ -1,4 +1,14 @@
 body
   font-family: sans-serif
-a
-  text-decoration: none
+  padding: 1em
+  color: black
+  a
+    text-decoration: none
+    &:active,
+    &:visited
+      color: brown
+    &:hover
+      color: grey
+
+
+
