--- a/src/components/header.styles.sass
+++ b/src/components/header.styles.sass
@@ -1,13 +1,20 @@
 .component-header
-    border-bottom: 0.1em solid grey
-    grid-template-columns: 1fr 3fr
-    align-items: center
     display: grid
+    align-items: center
+    grid-template-columns: auto auto
+    border-bottom: 0.1em solid grey
+    .component-header__home
+      display: grid
+      align-items: center
+      grid-template-columns: 100px auto
+      svg
+        width: 100px
+      h1
+        margin: 0
     .component-header__links
       text-align: right
       a
         margin-left: 1em
         h2
           display: inline-block
-          align-items: center
           margin: 0
