--- a/src/pages/home.styles.sass
+++ b/src/pages/home.styles.sass
@@ -1,2 +1,20 @@
 .page-home
   text-align: center
+
+  .category
+    margin-bottom: 2em
+
+    .category__cta
+      display: inline-block
+      position: relative
+
+      .category__cta-name
+        transform: translate(-50%, -50%)
+        border: 0.1em solid lightgrey
+        background-color: white
+        padding: 0.1em 0.3em
+        position: absolute
+        opacity: 0.8
+        margin: 0
+        left: 50%
+        top: 50%
