--- a/src/components/collection.styles.sass
+++ b/src/components/collection.styles.sass
@@ -1,26 +1,49 @@
 .component-collection
   .component-collection__sub-header
     text-align: center
+
     a
       display: inline-block
       margin-right: 1em
+
     .component-collection__collection-name
       display: inline-block
+
   .component-collection__products
-    grid-template-columns: 1fr 1fr 1fr 1fr
+    grid-template-columns: 1fr 1fr 1fr
     text-align: center
     display: grid
+
     .component-collection__product
-      border-width: 0 0.1em 0.1em 0
-      border-style: solid
-      border-color: lightgray
+      border: 0.1em solid lightgrey
+      position: relative
+      margin: 0.6em auto
+      display: inherit
       padding: 0.2em
-      margin: 0.6em
+
       .component-collection__product-name
-        text-align: left
+        border: 0.1em solid lightgrey
+        transform: translate(-50%)
+        background-color: white
+        padding: 0.1em 0.3em
+        position: absolute
+        opacity: 0.8
+        margin: 0
+        left: 50%
+        top: 1em
+
       img
-        width: 200px
-        height: 200px
         object-fit: cover
+        height: 300px
+        width: 300px
+
       .component-collection__price
-        text-align: right
+        border: 0.1em solid lightgrey
+        transform: translate(-50%)
+        background-color: white
+        padding: 0.1em 0.3em
+        position: absolute
+        opacity: 0.8
+        margin: 0
+        left: 50%
+        bottom: 1em
