--- a/src/pages/home.styles.sass
+++ b/src/pages/home.styles.sass
@@ -2,11 +2,20 @@
   text-align: center
 
   .category
-    margin-bottom: 2em
+    margin: 1em 0 2em 0
 
     .category__cta
-      display: inline-block
+      border: 0.1em solid lightgrey
       position: relative
+      display: inherit
+      padding: 0.2em
+
+      img
+        opacity: 0.5
+
+      &:hover
+        img
+          opacity: 1
 
       .category__cta-name
         transform: translate(-50%, -50%)
@@ -14,7 +23,6 @@
         background-color: white
         padding: 0.1em 0.3em
         position: absolute
-        opacity: 0.8
         margin: 0
         left: 50%
         top: 50%
