--- a/src/App.sass
+++ b/src/App.sass
@@ -4,11 +4,21 @@ body
   color: black
   a
     text-decoration: none
+    color: black
     &:active,
     &:visited
       color: brown
     &:hover
       color: grey
 
-
-
+  form
+    input
+      border: 0.1em solid black
+      padding: 0.5em 1em
+      display: block
+      margin: 1em
+    button
+      background-color: black
+      padding: 0.5em 1em
+      border: none
+      color: white
