--- a/src/components/header.styles.sass
+++ b/src/components/header.styles.sass
@@ -1,5 +1,5 @@
 .component-header
-    border-bottom: 0.1em solid grey
+    border-bottom: 0.2em double grey
     justify-content: space-between
     align-items: center
     display: flex
