--- a/src/components/category.styles.sass
+++ b/src/components/category.styles.sass
@@ -1,10 +1,10 @@
-.component-category
+.category-component
   grid-template-columns: 1fr 1fr 1fr
   text-align: center
   display: grid
   justify-content: space-between
 
-  a.component-category__cta
+  a.category-component__cta
     border-width: 0 0.1em 0.1em 0
     border-color: lightgrey
     display: inline-block
@@ -20,16 +20,16 @@
     img
       opacity: 0.5
 
-    .component-category__name
+    .category-component__name
       margin: 0.2em
 
   &.has-image
-    a.component-category__cta
+    a.category-component__cta
       border: 0.1em solid lightgrey
       margin: 0.6em auto
       display: inherit
 
-      .component-category__name
+      .category-component__name
         transform: translate(-50%, -50%)
         border: 0.1em solid lightgrey
         background-color: white
