--- a/src/components/collection.styles.sass
+++ b/src/components/collection.styles.sass
@@ -1,27 +1,27 @@
-.component-collection
-  .component-collection__sub-header
+.collection-component
+  .collection-component__sub-header
     text-align: center
 
     a
       display: inline-block
       margin-right: 1em
 
-    .component-collection__collection-name
+    .collection-component__collection-name
       display: inline-block
 
-  .component-collection__products
+  .collection-component__products
     grid-template-columns: 1fr 1fr 1fr
     text-align: center
     display: grid
 
-    .component-collection__product
+    .collection-component__product
       border: 0.1em solid lightgrey
       position: relative
       margin: 0.6em auto
       display: inherit
       padding: 0.2em
 
-      .component-collection__product-name
+      .collection-component__product-name
         border: 0.1em solid lightgrey
         transform: translate(-50%)
         background-color: white
@@ -37,7 +37,7 @@
         height: 300px
         width: 300px
 
-      .component-collection__price
+      .collection-component__price
         border: 0.1em solid lightgrey
         transform: translate(-50%)
         background-color: white
