--- a/src/components/header.styles.sass
+++ b/src/components/header.styles.sass
@@ -1,10 +1,10 @@
-.component-header
+.header-component
     border-bottom: 0.2em double grey
     justify-content: space-between
     align-items: center
     display: flex
 
-    .component-header__home
+    .header-component__home
       align-items: center
       display: flex
 
@@ -15,7 +15,7 @@
       h1
         margin: 0
 
-    .component-header__links
+    .header-component__links
       text-align: right
 
       a
