cart icon component

--- a/src/components/header.styles.sass
+++ b/src/components/header.styles.sass
@@ -16,11 +16,15 @@
         margin: 0
 
     .header-component__links
+      justify-content: space-between
       text-align: right
+      display: flex
+      .auth
+        font-size: 0.9em
 
-      a
-        margin-left: 1em
+        a
+          margin-left: 1em
 
-        h2
-          display: inline-block
-          margin: 0
+          h2
+            display: inline-block
+            margin: 0
