--- a/src/components/header.styles.sass
+++ b/src/components/header.styles.sass
@@ -19,6 +19,31 @@
       justify-content: space-between
       text-align: right
       display: flex
+      .cart
+        position: relative
+
+        .icon
+          position: relative
+          cursor: pointer
+          width: 30px
+
+          svg
+            width: 30px
+
+          .cart-count
+            text-align: center
+            position: absolute
+            width: 100%
+            top: 10px
+
+        .dropdown
+          border: 0.2em solid grey
+          position: absolute
+          background: white
+          padding: 1em
+          z-index: 1
+          right: 0
+
       .auth
         font-size: 0.9em
 
