--- a/src/App.sass
+++ b/src/App.sass
@@ -13,21 +13,23 @@ body
   .anchor
     text-decoration: none
     color: brown
+
     &:hover
       cursor: pointer
       color: grey
 
-  form
-    input
-      border: 0.1em solid black
-      padding: 0.5em 1em
-      display: block
-      margin: 1em
-    button
-      background-color: black
-      padding: 0.5em 1em
-      margin: 0.5em
-      border: none
-      color: white
-      &:hover
-        cursor: pointer
+  input
+    border: 0.1em solid black
+    padding: 0.5em 1em
+    display: block
+    margin: 1em
+
+  button
+    background-color: black
+    padding: 0.5em 1em
+    cursor: pointer
+    margin: 0.5em
+    border: none
+    color: white
+  .hidden
+    display: none
