--- a/src/App.sass
+++ b/src/App.sass
@@ -18,6 +18,11 @@ body
       cursor: pointer
       color: grey
 
+  ul
+    list-style: none
+    padding: 0
+    margin: 0
+
   input
     border: 0.1em solid black
     padding: 0.5em 1em
