--- a/src/components/header.styles.sass
+++ b/src/components/header.styles.sass
@@ -19,6 +19,7 @@
       justify-content: space-between
       text-align: right
       display: flex
+
       .cart
         position: relative
 
@@ -38,11 +39,34 @@
 
         .dropdown
           border: 0.2em solid grey
+          white-space: nowrap
           position: absolute
+          overflow-y: scroll
           background: white
+          max-height: 80vh
+          min-width: 25vw
           padding: 1em
           z-index: 1
           right: 0
+
+          .cart-product-component
+            justify-content: flex-end
+            font-weight: lighter
+            align-items: center
+            margin: 0 0 0.5em 0
+            font-size: 0.9em
+            display: flex
+
+            img
+              display: inline-block
+              margin-left: 0.5em
+              object-fit: cover
+              height: 50px
+              width: 50px
+
+          button
+            width: 100%
+            margin: 0
 
       .auth
         font-size: 0.9em
