--- a/src/components/header.styles.sass
+++ b/src/components/header.styles.sass
@@ -31,11 +31,11 @@
           svg
             width: 30px
 
-          .cart-count
+          .cart-quantity
             text-align: center
             position: absolute
             width: 100%
-            top: 10px
+            top: 12px
 
         .dropdown
           border: 0.2em solid grey
