empty cart dropdown support

--- a/src/App.sass
+++ b/src/App.sass
@@ -2,6 +2,7 @@ body
   color: black
   font-family: sans-serif
   padding: 1em
+  font-weight: lighter
 
   hr
     border-color: grey
@@ -17,6 +18,14 @@ body
     &:hover
       color: grey
       cursor: pointer
+
+  h1,
+  h2,
+  h3,
+  h4,
+  h5,
+  h6
+    font-weight: normal
 
   ul
     list-style: none
