--- a/src/components/header.styles.sass
+++ b/src/components/header.styles.sass
@@ -47,7 +47,6 @@
             align-items: center
             display: flex
             font-size: 0.9em
-            font-weight: lighter
             justify-content: flex-end
             margin: 0 0 0.5em 0
 
@@ -57,6 +56,9 @@
               margin-left: 0.5em
               object-fit: cover
               width: 50px
+
+          .header-component__cart-empty
+            text-align: center
 
           button
             margin: 0
