--- a/src/utils/mixins.sass
+++ b/src/utils/mixins.sass
@@ -12,11 +12,12 @@
     border: 0.1em solid lightgrey
     left: 50%
     margin: 0
+    opacity: 0.8
     padding: 0.1em 0.3em
     position: absolute
     top: 50%
     transform: translate(-50%, -50%)
-    transition: 0.2s
+    transition: all 0.2s
 
   &:hover
     img
@@ -24,4 +25,5 @@
 
     div
       background-color: black
+      opacity: 1
       transform: translate(-50%, -50%) scale(2)
