--- a/src/components/category.styles.sass
+++ b/src/components/category.styles.sass
@@ -10,6 +10,7 @@
     border-style: solid
     border-width: 0 0.1em 0.1em 0
     margin: 0.6em
+    min-width: 50px
     padding: 0.2em
 
   &.has-image
