--- a/src/utils/mixins.sass
+++ b/src/utils/mixins.sass
@@ -1,3 +1,12 @@
+=checkout-row()
+  display: grid
+  grid-template-columns: 1fr 3fr 1fr 1fr 1fr
+  text-align: center
+  align-items: center
+
+  div
+    padding: 0.2em
+
 =image-cta
   border: none
   display: inline-block
