refactor naming conventions & logic
* normalized css class names
* normalized redux selector/dispatch names
* using NavLink in header for active links
* normalized destructuring props across all components/pages
* after logging in, redirects from login page, to home page
* normalized functional component structure

--- a/src/components/header.styles.sass
+++ b/src/components/header.styles.sass
@@ -3,6 +3,7 @@
     border-bottom: 0.2em double grey
     display: flex
     justify-content: space-between
+    text-transform: lowercase
 
     .header-component__logo
       width: 55px
@@ -42,3 +43,6 @@
           h2
             display: inline-block
             margin: 0
+
+        span
+          text-transform: uppercase
