--- a/src/pages/home.styles.sass
+++ b/src/pages/home.styles.sass
@@ -1,10 +1,10 @@
 @import '../utils/mixins.sass'
 
-.page-home
+.home-page
   text-align: center
 
-  .page-home__category
+  .home-page__category
     margin: 1em 0 2em 0
 
-    .page-home__category-cta
+    .home-page__category-cta
       +image-cta
