store reducer & refactor for category/collections/product

--- a/src/pages/category.styles.sass
+++ b/src/pages/category.styles.sass
@@ -1,2 +1,11 @@
+@import '../utils/mixins.sass'
+
 .category-page
+  display: flex
+  flex-wrap: wrap
+  justify-content: center
   text-align: center
+
+  a
+    +image-cta
+    margin: 1em
