--- a/src/pages/collection.styles.sass
+++ b/src/pages/collection.styles.sass
@@ -3,3 +3,8 @@
 
   .collection-page__collection-name
     text-transform: uppercase
+
+  .collection-page__products
+    display: flex
+    flex-wrap: wrap
+    justify-content: center
