--- a/src/pages/home.styles.sass
+++ b/src/pages/home.styles.sass
@@ -6,5 +6,16 @@
   .home-page__category
     margin: 1em 0 2em 0
 
-    .home-page__category-cta
+    a
       +image-cta
+
+  .home-page__collections
+    display: flex
+    justify-content: center
+
+    a
+      border-color: lightgrey
+      border-style: solid
+      border-width: 0 0.1em 0.1em 0
+      margin: 0.6em
+      padding: 0.2em 1em
