small refactor: define key property first

--- a/src/pages/collection.styles.sass
+++ b/src/pages/collection.styles.sass
@@ -2,6 +2,7 @@
   text-align: center
 
   .collection-page__collection-name
+    margin: 1em 0 0 0
     text-transform: uppercase
 
   .collection-page__products
