--- a/src/utils/mixins.sass
+++ b/src/utils/mixins.sass
@@ -20,6 +20,7 @@
     background-color: white
     border: 0.1em solid lightgrey
     left: 50%
+    min-width: 50px
     margin: 0
     opacity: 0.8
     padding: 0.1em 0.3em
