stripe checkout button

--- a/src/pages/checkout.styles.sass
+++ b/src/pages/checkout.styles.sass
@@ -12,9 +12,17 @@
     margin: 2em 0 1em 0
     text-transform: uppercase
 
-  .cart-total
+  .checkout-page__cart-total
     text-align: right
 
     span
       font-size: 1.6em
       font-weight: normal
+
+  .checkout-page__checkout-button
+    text-align: right
+    margin: 2em 0
+
+  .checkout-page__test-warning
+    color: red
+    text-align: center
