refactored fetching firestore into async redux-thunk actions

--- a/src/components/header.styles.sass
+++ b/src/components/header.styles.sass
@@ -1,4 +1,5 @@
 .header-component
+  .header-component__main
     align-items: center
     border-bottom: 0.2em double grey
     display: flex
@@ -46,3 +47,9 @@
 
         span
           text-transform: uppercase
+
+  .header-component__error-message
+    background: red
+    color: white
+    padding: 0.2em
+    text-align:  center
