added loading spinner over logo

--- a/src/App.sass
+++ b/src/App.sass
@@ -1,22 +1,22 @@
 body
-  color: black
+  color: #000
   font-family: sans-serif
   padding: 1em
   font-weight: lighter
 
   hr
-    border-color: grey
+    border-color: #808080
     border-style: double
     border-width: 0 0 0.2em 0
     padding: 0.05em
 
   a,
   .anchor
-    color: brown
+    color: #a52a2a
     text-decoration: none
 
     &:hover
-      color: grey
+      color: #808080
       cursor: pointer
 
     &.active
@@ -36,21 +36,18 @@ body
     padding: 0
 
   input
-    border: 0.1em solid black
+    border: 0.1em solid #000
     display: block
     margin: 1em
     padding: 0.5em 1em
 
   button
-    background-color: black
+    background-color: #000
     border: none
-    color: white
+    color: #fff
     cursor: pointer
     margin: 0.5em
     padding: 0.5em 1em
 
   .hidden
     display: none
-
-  .is-loading
-    opacity: 0.2
