--- a/src/components/cart-dropdown.styles.sass
+++ b/src/components/cart-dropdown.styles.sass
@@ -1,6 +1,6 @@
 .cart-dropdown-component
-  background: white
-  border: 0.2em solid grey
+  background: #fff
+  border: 0.2em solid #808080
   max-height: 80vh
   min-width: 25vw
   overflow-y: scroll
