--- a/src/components/header.styles.sass
+++ b/src/components/header.styles.sass
@@ -1,13 +1,49 @@
 .header-component
   .header-component__main
     align-items: center
-    border-bottom: 0.2em double grey
+    border-bottom: 0.2em double #808080
     display: flex
     justify-content: space-between
     text-transform: lowercase
 
     .header-component__logo
+      display: inherit
+      svg
+        width: 55px
+
+    .header-component__is-loading
+      background-color: rgba(255, 255, 255, 0.8)
+      display: inline-block
+      height: 55px
+      position: absolute
       width: 55px
+
+      @keyframes spinner
+        0%
+          transform: rotate(0deg)
+        100%
+          transform: rotate(360deg)
+
+      div
+        animation: spinner 1.2s cubic-bezier(0.5, 0, 0.5, 1) infinite
+        border-color: #ed1f24 transparent transparent transparent
+        border-radius: 50%
+        border-style: solid
+        border-width: 8px
+        box-sizing: border-box
+        display: block
+        height: 55px
+        margin: 0
+        opacity: 0.5
+        position: absolute
+        width: 55px
+
+        &:nth-child(1)
+          animation-delay: -0.45s
+        &:nth-child(2)
+          animation-delay: -0.3s
+        &:nth-child(3)
+          animation-delay: -0.15s
 
     .header-component__links
       display: flex
@@ -49,7 +85,7 @@
           text-transform: uppercase
 
   .header-component__error-message
-    background: red
-    color: white
+    background: #ed1f24
+    color: #fff
     padding: 0.2em
     text-align:  center
