--- a/src/components/product.styles.sass
+++ b/src/components/product.styles.sass
@@ -7,21 +7,21 @@
       display: block
 
   img
-    border: 1px solid lightgrey
+    border: 1px solid #d3d3d3
     height: 300px
     object-fit: cover
     width: 300px
 
   .product-component__meta-data
-    color: grey
+    color: #808080
     display: flex
     justify-content: space-between
 
   button
     background-color: rgba(255,255,255, 0.8)
-    border: 1px solid grey
+    border: 1px solid #808080
     bottom: 2em
-    color: grey
+    color: #808080
     left: 50%
     margin: 0
     position: absolute
