--- a/src/utils/mixins.sass
+++ b/src/utils/mixins.sass
@@ -13,14 +13,14 @@
   position: relative
 
   img
-    border: 0.1em solid lightgrey
+    border: 0.1em solid #d3d3d3
     min-height: 100px
     min-width: 100px
     opacity: 1
 
   div
-    background-color: white
-    border: 0.1em solid lightgrey
+    background-color: #fff
+    border: 0.1em solid #d3d3d3
     left: 50%
     min-width: 50px
     margin: 0
@@ -36,6 +36,6 @@
       opacity: 0.5
 
     div
-      background-color: black
+      background-color: #000
       opacity: 1
       transform: translate(-50%, -50%) scale(1.5)
