--- a/src/pages/checkout.styles.sass
+++ b/src/pages/checkout.styles.sass
@@ -6,7 +6,7 @@
 
   .checkout-page__header
     +checkout-row
-    border-bottom: 0.1em solid grey
+    border-bottom: 0.1em solid #808080
     font-size: 0.6em
     font-weight: normal
     margin: 2em 0 1em 0
@@ -24,5 +24,5 @@
     margin: 2em 0
 
   .checkout-page__test-warning
-    color: red
+    color: #ed1f24
     text-align: center
