--- a/src/pages/home.styles.sass
+++ b/src/pages/home.styles.sass
@@ -14,7 +14,7 @@
     justify-content: center
 
     a
-      border-color: lightgrey
+      border-color: #d3d3d3
       border-style: solid
       border-width: 0 0.1em 0.1em 0
       margin: 0.6em
